src/lib/syntax/parser/snapshots/catlang__syntax__parser__declaration__tests__initialized_var_declarator.snap
---
source: src/lib/syntax/parser/declaration.rs
expression: res
---
(0:10) Declaration {
    attributes: [],
    declarator: Variable(
        VariableDeclarator {
            identifier: (4:6) "pi",
            type_expression: None,
            expression: Some(
                (9:10) PrimitiveExpression(
                    DecimalNumber(
                        "3",
                    ),
                ),
            ),
        },
    ),
}
